--- a/caps.html
+++ b/caps.html
@@ -67,8 +67,8 @@
             <p>Our Front Desk (Michigan Union 4th Floor) is open and ready to help support you -- staff members are available throughout the day to assist you with your needs to answer questions, and get you to the right place. CAPS can be reached by phone at: (734) 764-8312.</p>
 <br>
 <figure>
-    <img src="images/MCOMMONS-Michigan_Union.jpg" alt="Student Activities building">
-    <figcaption>Student Activities Building</figcaption>
+    <img src="images/MCOMMONS-Michigan_Union.jpg" alt="Picture of the front of the Michigan Union Building">
+    <figcaption>Michigan Union Building</figcaption>
 </figure>
 
 <section> 
