--- a/first_gen.html
+++ b/first_gen.html
@@ -17,7 +17,7 @@
                 <li><a href = "caps.html">CAPS</a></li>
             </ul>
         </nav>
-        <img src="images/first_gen_logo.jpeg" alt="UMSI Logo">
+        <img src="images/first_gen_logo.jpeg" alt="First-Generation Banner">
         <h1>First Generation</h1>
     </header>
 
@@ -57,7 +57,7 @@
 <br>
 <p>Questions for the First-Gen Gateway Staff? Email us at firstgeninfo@umich.edu</p>
 <figure>
-    <img src="images/MCOMMONS-Student_Activities_Building.jpg" alt="Student Activities building">
+    <img src="images/MCOMMONS-Student_Activities_Building.jpg" alt="Picture of the Student Activities building">
     <figcaption>Student Activities Building</figcaption>
 </figure>
 <section> 
